fix(better-local-files): Fix album card overflow and duplicate artists

--- a/custom-apps/better-local-files/src/css/app.module.scss
+++ b/custom-apps/better-local-files/src/css/app.module.scss
@@ -84,6 +84,7 @@
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
     display: -webkit-box;
+    overflow: hidden;
 }
 
 .text-full-centered {
